service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-devops-service
spec:
  type: ClusterIP  # Tipo de servicio, puedes cambiar a NodePort o LoadBalancer si necesitas acceso externo
  selector:
    app: hello-devops
  ports:
    - protocol: TCP
      port: 80  # Puerto a través del cual accederás al servicio
      targetPort: 8080  # Puerto del contenedor donde está la aplicación
